ui: Fixed icons in setup dialogs blurry on high DPI screens

--- a/bin/app/data/gui/window/listbox.css
+++ b/bin/app/data/gui/window/listbox.css
@@ -35,45 +35,21 @@ QtListItemWidget #field {
 	border-top: 1px solid lightgray;
 }
 
-#plusButton, #minusButton, #dotsButton, #editButton {
+#iconButton, #dotsButton, #plusButton, #minusButton, #editButton {
+	border: none;
 	color: white;
 	height: 1em;
-	margin-right: 3px;
 	width: 1em;
-	border: none;
+	padding: 1px;
 }
 
-#dotsButton {
-	margin-top: 2px;
-}
-
-#plusButton {
-	border-image: url(<setting:gui_path>window/plus.png);
-}
-
-#plusButton:hover {
-	border-image: url(<setting:gui_path>window/plus_hover.png);
-}
-
-#minusButton {
-	border-image: url(<setting:gui_path>window/minus.png);
-}
-
-#minusButton:hover {
-	border-image: url(<setting:gui_path>window/minus_hover.png);
-}
-
-#dotsButton {
-	border-image: url(<setting:gui_path>window/dots.png);
-}
-
-#dotsButton:hover {
-	border-image: url(<setting:gui_path>window/dots_hover.png);
+#plusButton, #minusButton, #editButton {
+	margin-right: 3px;
 }
 
 #editButton {
-	border-image: url(<setting:gui_path>code_view/images/edit.png);
 	margin-left: 6px;
+	margin-right: 3px;
 }
 
 #editButton:hover {
@@ -82,4 +58,5 @@ QtListItemWidget #field {
 
 #dropInfo {
 	color: #999;
+	margin-top: 2px;
 }
